# TietoEvry

./: README.md  ~$etoEvry_cpp_task002.docx
Game/: .gitignore  CMakeLists.txt  TietoEcryGame.py  main.cpp  mapa.txt  rozkazy.txt  status.txt
Game/Include/: Coordinates.hpp  FileManager.hpp  MapObjects.hpp  Mediator.hpp  Object.hpp  Player.hpp  Time.hpp  Units.hpp  map.hpp
Game/Src/: Coordinates.cpp  FileManager.cpp  MapObjects.cpp  Mediator.cpp  Object.cpp  Player.cpp  Time.cpp  Units.cpp  map.cpp
Game/Tests/: ActionTests.cpp  MapTests.cpp  Test.cpp
